--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "express": "^4.16.2",
     "parcel-bundler": "^1.5.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6"
   },
   "devDependencies": {
     "chai": "^4.1.2",
